argocd/infra/monitoring/scrutiny/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scrutiny
  name: scrutiny
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: scrutiny
